<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/rools"
    xmlns:card_view="http://schemas.android.com/apk/res/rest-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/ripLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/rivhTvNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_cliente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>





                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/fecha"></TextView>

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/hora"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:text="@string/total"></TextView>




                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/rivhTvFecha"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/precio_cero"></TextView>

                    <TextView
                        android:id="@+id/rivhTvHora"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/precio_item_cero"></TextView>

                    <TextView
                        android:id="@+id/rivhTvTotal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:text="@string/precio_item_cero"></TextView>




                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>