<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/rools"
    xmlns:card_view="http://schemas.android.com/apk/res/rest-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/ripLLItemSeleccionado"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_margin="10dp"
                android:src="@drawable/caja_producto"
                android:id="@+id/rivCivImagen"
                android:layout_width="70dp"
                android:layout_height="70dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/rivTvNombre"
                        android:textSize="20sp"
                        android:text="@string/nombre_producto"
                        android:layout_weight="0.9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></TextView>
                    
                    
                    <Button
                        android:id="@+id/rivBQuitar"
                        android:background="@color/rojoFuerte"
                        android:textColor="@color/blanco"
                        android:textSize="20sp"
                        android:text="X"
                        android:layout_weight="0.1"
                        android:layout_width="30dp"
                        android:layout_height="30dp"></Button>


                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/cantidad"></TextView>

                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:text="@string/precio"></TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:text="@string/total"></TextView>




                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/rivEtCantidad"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:inputType="number"
                        android:text="@string/precio_cero"></EditText>

                    <EditText
                        android:id="@+id/rivEtPrecio"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:inputType="numberDecimal"
                        android:text="@string/precio_item_cero"></EditText>

                    <TextView
                        android:id="@+id/rivTvTotal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:gravity="center"
                        android:text="@string/precio_item_cero"></TextView>




                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>