<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.VentaNuevaActivity">

    <include layout="@layout/toolbar_layout"></include>

    <LinearLayout
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

     <LinearLayout
         android:layout_weight="0.0"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <com.google.android.material.textfield.TextInputLayout
         android:hint="@string/nombre_cliente"
         android:background="@color/blanco"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <AutoCompleteTextView
             android:id="@+id/avnActvCliente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />



     </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:hint="@string/observacion"
             android:background="@color/blanco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/avnTietObservacion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>



         </com.google.android.material.textfield.TextInputLayout>



     </LinearLayout>

        <LinearLayout
            android:layout_weight="0.99"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/avnRvProductosSeleccionados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>
            
            
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">
                
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="0.7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    
                    <Button
                        android:background="@drawable/button_circle_agregar"
                        android:id="@+id/avnBNuevo"
                        android:layout_width="60dp"
                        android:layout_height="60dp"></Button>
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    
                    <com.google.android.material.textfield.TextInputLayout
                        android:textColorHint="@color/negro"
                        android:hint="@string/total"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/avnTietTotal"
                            android:textAlignment="center"
                            android:text="@string/precio_item_cero"
                            android:enabled="false"
                            android:textColor="@color/negro"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_horizontal" />
                        
                        
                    </com.google.android.material.textfield.TextInputLayout>
                    
                </LinearLayout>
                
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>